examples/test/testpolicy8820.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8820
  namespace: namespace408
spec:
  podSelector:
    matchLabels:
      key39: value7
      key43: value48
      key35: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value9
      podSelector:
        matchLabels:
          key36: value14
